Add chromecast support for android, update package versions